adding apache config for "prod" version

--- a/config/apache/stemsible.conf
+++ b/config/apache/stemsible.conf
@@ -1,3 +1,15 @@
+<Directory /www/crowfly.net/stemsible>
+	#AllowOverride None
+	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+        #DirectoryIndex index.py
+	#Order allow,deny
+	#Allow from all
+	AddHandler cgi-script .py
+
+        SetEnv PYTHONPATH /apps/stemsible/lib
+        SetEnv VCONF /apps/stemsible/config/prod.yml
+</Directory>
+
 <Directory /www/dev.crowfly.net/stemsible>
 	#AllowOverride None
 	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
