--- a/config/apache/stemsible-server.conf
+++ b/config/apache/stemsible-server.conf
@@ -1,32 +1,47 @@
 <VirtualHost *:80>
-    ServerName stemsible-server.crowfly.net
+    ServerName stemsible.crowfly.net
+    DocumentRoot /home/dlink/stemsible/web
 
     WSGIDaemonProcess stemsible user=dlink group=dev threads=5
-    WSGIScriptAlias / /home/dlink/stemsible/web/server.wsgi
+    WSGIScriptAlias /api /home/dlink/stemsible/web/server.wsgi
 
-    ErrorLog "/var/log/apache2/stemsible-server-error.log"
-    CustomLog "/var/log/apache2/stemsible-server.log" combined
+    ErrorLog "/var/log/apache2/stemsible-error.log"
+    CustomLog "/var/log/apache2/stemsible.log" combined
 
     <Directory /home/dlink/stemsible/web>
         WSGIProcessGroup stemsible
         WSGIApplicationGroup stemsible
+
+	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+	AddHandler cgi-script .py
+        SetEnv PYTHONPATH /apps/stemsible/lib
+        SetEnv VCONF /apps/stemsible/config/prod.yml
+
         Require all granted
     </Directory>
 
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName dev-stemsible-server.crowfly.net
+    ServerName dev-stemsible.crowfly.net
+    DocumentRoot /home/dlink/stemsible/web
 
     WSGIDaemonProcess dev-stemsible user=dlink group=dev threads=5
-    WSGIScriptAlias / /home/dlink/stemsible/web/dev-server.wsgi
+    WSGIScriptAlias /api /home/dlink/stemsible/web/dev-server.wsgi
 
-    ErrorLog "/var/log/apache2/dev-stemsible-server-error.log"
-    CustomLog "/var/log/apache2/dev-stemsible-server.log" combined
+    ErrorLog "/var/log/apache2/dev-stemsible-error.log"
+    CustomLog "/var/log/apache2/dev-stemsible.log" combined
 
     <Directory /home/dlink/stemsible/web>
         WSGIProcessGroup dev-stemsible
         WSGIApplicationGroup dev-stemsible
+	WSGIScriptReloading On
+
+	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+	AddHandler cgi-script .py
+        SetEnv PYTHONPATH /home/dlink/stemsible/lib
+        SetEnv VCONF /home/dlink/stemsible/config/dev.yml
+
         Require all granted
     </Directory>
 
