--- a/config/apache/stemsible.conf
+++ b/config/apache/stemsible.conf
@@ -1,24 +1,48 @@
-<Directory /www/crowfly.net/stemsible>
-	#AllowOverride None
-	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-        #DirectoryIndex index.py
-	#Order allow,deny
-	#Allow from all
-	AddHandler cgi-script .py
+<VirtualHost *:80>
+    ServerName stemsible.crowfly.net
+    DocumentRoot /home/dlink/stemsible/web
 
+    WSGIDaemonProcess stemsible user=dlink group=dev threads=5
+    WSGIScriptAlias /api /home/dlink/stemsible/web/server.wsgi
+
+    ErrorLog "/var/log/apache2/stemsible-error.log"
+    CustomLog "/var/log/apache2/stemsible.log" combined
+
+    <Directory /home/dlink/stemsible/web>
+        WSGIProcessGroup stemsible
+        WSGIApplicationGroup stemsible
+
+	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+	AddHandler cgi-script .py
         SetEnv PYTHONPATH /apps/stemsible/lib
         SetEnv VCONF /apps/stemsible/config/prod.yml
-</Directory>
 
-<Directory /www/dev.crowfly.net/stemsible>
-	#AllowOverride None
+        Require all granted
+    </Directory>
+
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName dev-stemsible.crowfly.net
+    DocumentRoot /home/dlink/stemsible/web
+
+    WSGIDaemonProcess dev-stemsible user=dlink group=dev threads=5
+    WSGIScriptAlias /api /home/dlink/stemsible/web/dev-server.wsgi
+
+    ErrorLog "/var/log/apache2/dev-stemsible-error.log"
+    CustomLog "/var/log/apache2/dev-stemsible.log" combined
+
+    <Directory /home/dlink/stemsible/web>
+        WSGIProcessGroup dev-stemsible
+        WSGIApplicationGroup dev-stemsible
+	WSGIScriptReloading On
+
 	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-        #DirectoryIndex index.py
-	#Order allow,deny
-	#Allow from all
 	AddHandler cgi-script .py
-
         SetEnv PYTHONPATH /home/dlink/stemsible/lib
         SetEnv VCONF /home/dlink/stemsible/config/dev.yml
-</Directory>
 
+        Require all granted
+    </Directory>
+
+</VirtualHost>
