Apache Config: adding basic auth to prod site

--- a/config/apache/stemsible2.conf
+++ b/config/apache/stemsible2.conf
@@ -6,6 +6,11 @@
 	#Allow from all
 	AddHandler cgi-script .py
 
+        AuthType Basic
+        AuthName "Stemsible Access"
+        AuthUserFile /etc/stemsible/htpasswd
+        Require valid-user
+
         SetEnv PYTHONPATH /apps/stemsible/lib
         SetEnv VCONF /apps/stemsible/config/prod.yml
 </Directory>
