Introduce Session Login/Logout, and Profile Page

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -14,3 +14,6 @@ logging:
    dir: /home/dlink/log
    filename: /home/dlink/log/stemsible.log
    level: DEBUG
+
+sessions:
+   dir: /data/stemsible/sessions
