--- a/config/ukumar.yml
+++ b/config/ukumar.yml
@@ -14,3 +14,6 @@ logging:
    dir: /home/ukumar/log
    filename: /home/ukumar/log/stemsible.log
    level: DEBUG
+
+sessions:
+   dir: /data/stemsible/sessions_ukumar
