Apache config: adding vhost for ukumar.stemsible.com

--- a/config/apache/stemsible2.conf
+++ b/config/apache/stemsible2.conf
@@ -32,3 +32,34 @@
         SetEnv VCONF /home/dlink/stemsible/config/dev.yml
 </Directory>
 
+<VirtualHost *:80>
+    ServerName ukumar.stemsible.com
+    DocumentRoot /home/ukumar/stemsible/web
+
+    #WSGIDaemonProcess dev-stemsible user=dlink group=dev threads=5
+    #WSGIScriptAlias /api /home/dlink/stemsible/web/dev-server.wsgi
+
+    ErrorLog "/var/log/apache2/ukumar.stemsible.com.error.log"
+    CustomLog "/var/log/apache2/ukumar.stemsible.com.log" combined
+
+    <Directory /home/ukumar/stemsible/web>
+        #WSGIProcessGroup dev-stemsible
+        #WSGIApplicationGroup dev-stemsible
+	#WSGIScriptReloading On
+
+	Options +ExecCGI -MultiViews +FollowSymLinks
+	AddHandler cgi-script .py
+        SetEnv PYTHONPATH /home/ukumar/stemsible/lib
+        SetEnv VCONF /home/ukumar/stemsible/config/ukumar.yml
+
+        Require all granted
+    </Directory>
+
+    #<Location />
+    #    AuthType Basic
+    #    AuthName "Stemsible Access"
+    #    AuthUserFile /etc/stemsible/htpasswd
+    #    Require valid-user
+    #</Location>
+
+</VirtualHost>
