environmental config bug tweeks

--- a/config/apache/stemsible2.conf
+++ b/config/apache/stemsible2.conf
@@ -23,10 +23,10 @@
 	#Allow from all
 	AddHandler cgi-script .py
 
-        AuthType Basic
-        AuthName "Stemsible Access"
-        AuthUserFile /etc/stemsible/htpasswd
-        Require valid-user
+        #AuthType Basic
+        #AuthName "Stemsible Access"
+        #AuthUserFile /etc/stemsible/htpasswd
+        #Require valid-user
 
         SetEnv PYTHONPATH /home/dlink/stemsible/lib
         SetEnv VCONF /home/dlink/stemsible/config/dev.yml
