adding kmishra.stemsible.com to apach econfig

--- a/config/apache/stemsible2.conf
+++ b/config/apache/stemsible2.conf
@@ -6,10 +6,10 @@
 	#Allow from all
 	AddHandler cgi-script .py
 
-        AuthType Basic
-        AuthName "Stemsible Access"
-        AuthUserFile /etc/stemsible/htpasswd
-        Require valid-user
+        #AuthType Basic
+        #AuthName "Stemsible Access"
+        #AuthUserFile /etc/stemsible/htpasswd
+        #Require valid-user
 
         SetEnv PYTHONPATH /apps/stemsible/lib
         SetEnv VCONF /apps/stemsible/config/prod.yml
@@ -61,5 +61,23 @@
     #    AuthUserFile /etc/stemsible/htpasswd
     #    Require valid-user
     #</Location>
+
+</VirtualHost>
+
+<VirtualHost *:80>
+    ServerName kmishra.stemsible.com
+    DocumentRoot /home/kmishra/stemsible/web
+
+    ErrorLog "/home/kmishra/log/kmishra.stemsible.com.error.log"
+    CustomLog "/home/kmishra/log/kmishra.stemsible.com.log" combined
+
+    <Directory /home/kmishra/stemsible/web>
+	Options +ExecCGI -MultiViews +FollowSymLinks
+	AddHandler cgi-script .py
+        SetEnv PYTHONPATH /home/kmishra/stemsible/lib
+        SetEnv VCONF /home/kmishra/stemsible/config/kmishra.yml
+
+        Require all granted
+    </Directory>
 
 </VirtualHost>
