apache config: python unicode bug fix

--- a/config/apache/stemsible2.conf
+++ b/config/apache/stemsible2.conf
@@ -13,6 +13,7 @@
 
         SetEnv PYTHONPATH /apps/stemsible/lib
         SetEnv VCONF /apps/stemsible/config/prod.yml
+	SetEnv PYTHONIOENCODING UTF-8
 </Directory>
 
 <Directory /www/dev.crowfly.net/stemsible>
@@ -30,6 +31,7 @@
 
         SetEnv PYTHONPATH /home/dlink/stemsible/lib
         SetEnv VCONF /home/dlink/stemsible/config/dev.yml
+	SetEnv PYTHONIOENCODING UTF-8
 </Directory>
 
 <VirtualHost *:80>
@@ -51,6 +53,7 @@
 	AddHandler cgi-script .py
         SetEnv PYTHONPATH /home/ukumar/stemsible/lib
         SetEnv VCONF /home/ukumar/stemsible/config/ukumar.yml
+	SetEnv PYTHONIOENCODING UTF-8
 
         Require all granted
     </Directory>
@@ -76,6 +79,7 @@
 	AddHandler cgi-script .py
         SetEnv PYTHONPATH /home/kmishra/stemsible/lib
         SetEnv VCONF /home/kmishra/stemsible/config/kmishra.yml
+	SetEnv PYTHONIOENCODING UTF-8
 
         Require all granted
     </Directory>
