build all tabls: minor edits

--- a/config/apache/stemsible.conf
+++ b/config/apache/stemsible.conf
@@ -1,46 +1,85 @@
-<VirtualHost *:80>
-    ServerName stemsible.crowfly.net
-    DocumentRoot /home/dlink/stemsible/web
-
-    WSGIDaemonProcess stemsible user=dlink group=dev threads=5
-    WSGIScriptAlias /api /home/dlink/stemsible/web/server.wsgi
-
-    ErrorLog "/var/log/apache2/stemsible-error.log"
-    CustomLog "/var/log/apache2/stemsible.log" combined
-
-    <Directory /home/dlink/stemsible/web>
-        WSGIProcessGroup stemsible
-        WSGIApplicationGroup stemsible
-
+<Directory /www/crowfly.net/stemsible>
+	#AllowOverride None
 	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+        #DirectoryIndex index.py
+	#Order allow,deny
+	#Allow from all
 	AddHandler cgi-script .py
+
+        #AuthType Basic
+        #AuthName "Stemsible Access"
+        #AuthUserFile /etc/stemsible/htpasswd
+        #Require valid-user
+
         SetEnv PYTHONPATH /apps/stemsible/lib
         SetEnv VCONF /apps/stemsible/config/prod.yml
+	SetEnv PYTHONIOENCODING UTF-8
+</Directory>
+
+<Directory /www/dev.crowfly.net/stemsible>
+	#AllowOverride None
+	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+        #DirectoryIndex index.py
+	#Order allow,deny
+	#Allow from all
+	AddHandler cgi-script .py
+
+        #AuthType Basic
+        #AuthName "Stemsible Access"
+        #AuthUserFile /etc/stemsible/htpasswd
+        #Require valid-user
+
+        SetEnv PYTHONPATH /home/dlink/stemsible/lib
+        SetEnv VCONF /home/dlink/stemsible/config/dev.yml
+	SetEnv PYTHONIOENCODING UTF-8
+</Directory>
+
+<VirtualHost *:80>
+    ServerName ukumar.stemsible.com
+    DocumentRoot /home/ukumar/stemsible/web
+
+    #WSGIDaemonProcess dev-stemsible user=dlink group=dev threads=5
+    #WSGIScriptAlias /api /home/dlink/stemsible/web/dev-server.wsgi
+
+    ErrorLog "/var/log/apache2/ukumar.stemsible.com.error.log"
+    CustomLog "/var/log/apache2/ukumar.stemsible.com.log" combined
+
+    <Directory /home/ukumar/stemsible/web>
+        #WSGIProcessGroup dev-stemsible
+        #WSGIApplicationGroup dev-stemsible
+	#WSGIScriptReloading On
+
+	Options +ExecCGI -MultiViews +FollowSymLinks
+	AddHandler cgi-script .py
+        SetEnv PYTHONPATH /home/ukumar/stemsible/lib
+        SetEnv VCONF /home/ukumar/stemsible/config/ukumar.yml
+	SetEnv PYTHONIOENCODING UTF-8
 
         Require all granted
     </Directory>
 
+    #<Location />
+    #    AuthType Basic
+    #    AuthName "Stemsible Access"
+    #    AuthUserFile /etc/stemsible/htpasswd
+    #    Require valid-user
+    #</Location>
+
 </VirtualHost>
 
 <VirtualHost *:80>
-    ServerName dev-stemsible.crowfly.net
-    DocumentRoot /home/dlink/stemsible/web
+    ServerName kmishra.stemsible.com
+    DocumentRoot /home/kmishra/stemsible/web
 
-    WSGIDaemonProcess dev-stemsible user=dlink group=dev threads=5
-    WSGIScriptAlias /api /home/dlink/stemsible/web/dev-server.wsgi
+    ErrorLog "/home/kmishra/log/kmishra.stemsible.com.error.log"
+    CustomLog "/home/kmishra/log/kmishra.stemsible.com.log" combined
 
-    ErrorLog "/var/log/apache2/dev-stemsible-error.log"
-    CustomLog "/var/log/apache2/dev-stemsible.log" combined
-
-    <Directory /home/dlink/stemsible/web>
-        WSGIProcessGroup dev-stemsible
-        WSGIApplicationGroup dev-stemsible
-	WSGIScriptReloading On
-
-	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
+    <Directory /home/kmishra/stemsible/web>
+	Options +ExecCGI -MultiViews +FollowSymLinks
 	AddHandler cgi-script .py
-        SetEnv PYTHONPATH /home/dlink/stemsible/lib
-        SetEnv VCONF /home/dlink/stemsible/config/dev.yml
+        SetEnv PYTHONPATH /home/kmishra/stemsible/lib
+        SetEnv VCONF /home/kmishra/stemsible/config/kmishra.yml
+	SetEnv PYTHONIOENCODING UTF-8
 
         Require all granted
     </Directory>
