Registration: add email verification

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -18,3 +18,7 @@ logging:
 
 sessions:
    dir: /data/stemsible/dev-sessions
+
+emails:
+   username: info@stemsible.com
+   password: $STEMSIBLE_EMAIL_PASS
