--- a/config/apache/stemsible-non-virtualhosts.conf
+++ b/config/apache/stemsible-non-virtualhosts.conf
@@ -14,6 +14,9 @@
         SetEnv PYTHONPATH /apps/stemsible/lib
         SetEnv VCONF /apps/stemsible/config/prod.yml
 	SetEnv PYTHONIOENCODING UTF-8
+
+        SetEnv STEMSIBLE_EMAIL_PASS change_me
+
 </Directory>
 
 <Directory /www/dev.crowfly.net/stemsible>
@@ -32,6 +35,9 @@
         SetEnv PYTHONPATH /home/dlink/stemsible/lib
         SetEnv VCONF /home/dlink/stemsible/config/dev.yml
 	SetEnv PYTHONIOENCODING UTF-8
+
+        SetEnv STEMSIBLE_EMAIL_PASS change_me
+
 </Directory>
 
 <VirtualHost *:80>
