--- a/config/ukumar.yml
+++ b/config/ukumar.yml
@@ -18,3 +18,7 @@ logging:
 
 sessions:
    dir: /data/stemsible/sessions_ukumar
+
+emails:
+   username: info@stemsible.com
+   password: $STEMSIBLE_EMAIL_PASS
