Swap out SMTP to gmail, with rackspace mailgun api

--- a/config/dev.yml
+++ b/config/dev.yml
@@ -22,4 +22,4 @@ sessions:
 emails:
    name: Dev Stemsible
    username: info@stemsible.com
-   password: $STEMSIBLE_EMAIL_PASS
+   apikey: $STEMSIBLE_MAILGUN_APIKEY
