Summary Email: report number of new posts.  Also added mech. to not send mail in dev environments

--- a/config/prod.yml
+++ b/config/prod.yml
@@ -20,6 +20,7 @@ sessions:
    dir: /data/stemsible/sessions
 
 emails:
+   active: true
    name: Stemsible
    username: info@stemsible.com
    apikey: $STEMSIBLE_MAILGUN_APIKEY
