--- a/config/dev.yml
+++ b/config/dev.yml
@@ -20,6 +20,7 @@ sessions:
    dir: /data/stemsible/dev-sessions
 
 emails:
+   active: false  # turn off email
    name: Dev Stemsible
    username: info@stemsible.com
    apikey: $STEMSIBLE_MAILGUN_APIKEY
