--- a/config/ukumar.yml
+++ b/config/ukumar.yml
@@ -20,5 +20,7 @@ sessions:
    dir: /data/stemsible/ukumar-sessions
 
 emails:
+   active: false  # turn off email
+   name: Dev Stemsible
    username: info@stemsible.com
-   password: $STEMSIBLE_EMAIL_PASS
+   apikey: $STEMSIBLE_MAILGUN_APIKEY
