--- a/config/vagrant.yml
+++ b/config/vagrant.yml
@@ -20,6 +20,7 @@ sessions:
    dir: /data/stemsible/sessions
 
 emails:
-   name: Stemsible
+   active: false  # turn off email
+   name: Dev Stemsible
    username: info@stemsible.com
-   password: $STEMSIBLE_EMAIL_PASS
+   apikey: $STEMSIBLE_MAILGUN_APIKEY
