stage config: put in mailgun apikey

--- a/config/stage.yml
+++ b/config/stage.yml
@@ -23,4 +23,4 @@ emails:
    active: false  # turn off email
    name: Stage Stemsible
    username: info@stemsible.com
-   password: $STEMSIBLE_EMAIL_PASS
+   password: $STEMSIBLE_MAILGUN_APIKEY
